List#getFirst not available before Java21